QoS overhaul
Major UI/UX updates, stability updates + QoS overhaul